<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/root_container"
    android:background="@drawable/background_down">
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/orange"/>

    <TextView
        android:id="@+id/user_name_welcome"
        android:layout_below="@+id/welcome_text"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="name"
        android:textSize="20sp"
        android:textColor="@color/orange"/>
    <TextView
        android:layout_marginTop="30dp"
        android:layout_below="@+id/user_name_welcome"
        android:layout_centerHorizontal="true"
        android:layout_width="330dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Please_select_one_of_the_following"
        android:textSize="25sp"
        android:id="@+id/text"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text"
        android:layout_marginTop="40dp">
        <Button
            android:id="@+id/enter_area_btn"
            android:layout_width="220dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/Enter_an_area_to_search_selter"
            android:textAllCaps="false"
            android:backgroundTint="@color/orangeChose"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/profile_user_btn"
            android:layout_width="220dp"
            android:layout_marginTop="7dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/View_user_information"
            android:textAllCaps="false"
            android:backgroundTint="@color/orangeChose"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp">
            <Button
                android:id="@+id/enter_area_business_btn"
                android:layout_width="220dp"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:text="@string/Enter_the_map_of_your_area_of_practice"
                android:backgroundTint="@color/orangeChose"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:visibility="invisible"/>
            <Button
                android:id="@+id/confirm_users_btn"
                android:layout_width="220dp"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:text="@string/Approval_user_updates"
                android:backgroundTint="@color/orangeChose"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>
        </RelativeLayout>
        <Button
            android:id="@+id/remove_users_btn"
            android:textAllCaps="false"
            android:layout_width="220dp"
            android:layout_marginTop="7dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/Remove_users"
            android:backgroundTint="@color/orangeChose"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
    </LinearLayout>

</RelativeLayout>