<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/linear">

    <ImageView
        android:layout_marginTop="6dp"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_location_city_24"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_shelter"
            android:textColor="@color/orangeChose"
            android:layout_marginEnd="10dp"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/orangeChose"
            android:id="@+id/shelter_name_window_info"
            android:textSize="13sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Address_shelter"
            android:textColor="@color/orangeChose"
            android:layout_marginEnd="10dp"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orangeChose"
            android:id="@+id/shelter_address_window_info"
            android:textSize="13sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Distance_shelter"
            android:textColor="@color/orangeChose"
            android:layout_marginEnd="10dp"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orangeChose"
            android:id="@+id/shelter_distance_window_info"
            android:textSize="13sp"/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Click_for_more_details"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="13sp"
        android:textStyle="bold"/>
</LinearLayout>