<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/root_container"
    android:background="@drawable/background_down"
    tools:context=".Search_area_fragment"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true">
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/orange"/>

    <TextView
        android:id="@+id/user_name_welcome_search_page"
        android:layout_below="@+id/welcome_text"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="name"
        android:textSize="20sp"
        android:textColor="@color/orange"/>
    <TextView
        android:layout_marginTop="30dp"
        android:layout_below="@+id/user_name_welcome_search_page"
        android:layout_centerHorizontal="true"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/title_search_area_fragment"
        android:textSize="25sp"
        android:id="@+id/text"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text"
        android:id="@+id/liner_layout_text"
        android:layout_marginTop="40dp">
        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            app:startIconTint="@color/orange"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:layout_height="50dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spiner_text"
                android:layout_width="match_parent"
                app:startIconTint="@color/orange"
                app:startIconDrawable="@drawable/ic_baseline_location_city_24"
                android:theme="@style/ThemeOverlay.MaterialComponents.AutoCompleteTextView"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/spinner_city_search"
                android:layout_width="325dp"
                android:layout_alignBaseline="@id/spiner_text"
                android:layout_alignStart="@id/spiner_text"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"
                android:layout_height="40dp" />
        </RelativeLayout>
        <AutoCompleteTextView
            android:id="@+id/street"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionHint="@string/select_a_street"
            android:completionThreshold="1"
            android:hint="@string/select_a_street"
            android:dropDownHeight="200dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:padding="10dp" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_address"
            android:layout_width="match_parent"
            app:startIconTint="@color/orange"
            app:startIconDrawable="@drawable/ic_baseline_123_24"
            android:hint="@string/number_home"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            android:visibility="gone"
            android:theme="@style/ThemeOverlay.MaterialComponents.AutoCompleteTextView">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_address_search"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/local_area_btn"
        android:layout_width="120dp"
        android:layout_gravity="center"
        android:layout_below="@+id/liner_layout_text"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:text="@string/Current_Location"
        android:backgroundTint="@color/orange2"
        android:layout_height="wrap_content"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/create_map_btn"
        android:layout_width="220dp"
        android:layout_gravity="center"
        android:layout_below="@+id/local_area_btn"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:text="@string/obtaining_a_desired_area_map"
        android:textAllCaps="false"
        android:backgroundTint="@color/orangeChose"
        android:layout_height="wrap_content"/>

</RelativeLayout>