<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserDetailsFragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_down"
    android:clickable="true">
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/orange"/>

    <TextView
        android:id="@+id/user_name_welcome"
        android:layout_below="@+id/welcome_text"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="name"
        android:textSize="20sp"
        android:textColor="@color/orange"/>
    <TextView
        android:layout_marginTop="30dp"
        android:layout_below="@+id/user_name_welcome"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/User_details"
        android:textSize="25sp"
        android:id="@+id/text"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text"
        android:layout_marginTop="40dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_user"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:id="@+id/text_email_user"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/text_email_user"
            android:layout_alignBaseline="@id/text_email_user"
            android:textSize="20sp"
            android:id="@+id/user_email_info" />
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Password_user"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:id="@+id/text_password_user"/>

            <TextView
                android:id="@+id/user_password_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/text_password_user"
                android:layout_toEndOf="@id/text_password_user"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Name_user"
                android:textSize="20sp"
                android:layout_marginEnd="10dp"
                android:id="@+id/text_name_user"
                />
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/text_name_user"
                android:layout_alignBaseline="@id/text_name_user"
                android:textSize="20sp"
                android:id="@+id/user_name_info" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/User_type"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/text_type_user"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/text_type_user"
                android:layout_alignBaseline="@id/text_type_user"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:id="@+id/user_type_info" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>