<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_mail"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        app:startIconTint="@color/orange"
        app:startIconDrawable="@drawable/ic_email_24"
        android:layout_marginEnd="20dp"
        android:hint="@string/email_title"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.MaterialComponents.AutoCompleteTextView">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_id_login"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        app:startIconTint="@color/orange"
        app:startIconDrawable="@drawable/ic_lock_24"
        android:layout_marginEnd="20dp"
        android:hint="@string/Password_regular"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.MaterialComponents.AutoCompleteTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_id_login"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/orange"
        android:text="@string/login_title"
        android:textAllCaps="false"/>
</LinearLayout>